# tencentcloud-cli

./: .gitignore  .travis.yml  CHANGELOG.md  COS_CLI_自测报告.md  Dockerfile  LICENSE  MANIFEST.in  README.en.md  README.md  SERVICE_CHANGELOG.md  products.md  pyproject.toml  setup.py  tox.ini
.codebuddy/rules/: 01-project-structure.md  02-client-and-params.md  03-transfer-and-progress.md  04-error-handling.md  05-utils-reference.md
.codebuddy/skills/cos-plugin-develop-skills/: SKILL.md
.github/workflows/: binary-release.yml  docker-hub.yml
jmespath/: __init__.py  ast.py  compat.py  exceptions.py  functions.py  lexer.py  parser.py  visitor.py
tccli/: __init__.py  action_caller.py  argparser.py  argument.py  base_command.py  cli_input_json.py  cli_unfold_argument.py  command.py  compatibility.py  completer.py  configure.py  credentials.py  document_handler.py  error_msg.py  exceptions.py  format_output.py  generatecliskeleton.py  help_command.py  help_template.py  loaders.py  log.py  main.py  nice_command.py  oauth.py  options_define.py  plugin.py  showHelp.py  six.py  sso.py  style.py  table.py  text.py  utils.py
tccli/advance/: userConfigHandler.py  userProfileHandler.py
tccli/colorama/: __init__.py  ansi.py  ansitowin32.py  initialise.py  win32.py  winterm.py
tccli/plugins/auth/: __init__.py  add.py  browser_flow.py  login.py  logout.py  texts.py  token_api.py
tccli/plugins/ci/: __init__.py  ai_recognition.py  auditing.py  ci_helpers.py  doc_process.py  file_process.py  image_process.py  media_process.py
tccli/plugins/cos/: __init__.py  (+24 more)
tccli/services/: MANIFEST.in  __init__.py
tests/: test_action_caller.py  test_argument.py  test_auth.py  test_cli_unfold_argument.py  test_command.py  test_configure.py  test_cvm.py  test_document_handler.py  test_helper.py  test_loaders.py  test_request_client.py  test_sso.py  utils.py
(+17981 files in other folders)
