[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tccli"
version = "3.0.894.1"
authors = [
  { name="tencentcloudapi", email="tencentcloudapi@tencent.com" },
]
description = "Universal Command Line Environment for Tencent Cloud"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
]

[project.urls]
"Homepage" = "https://github.com/TencentCloud/tencentcloud-cli"
"Bug Tracker" = "https://github.com/TencentCloud/tencentcloud-cli/issues"
