[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["tccli/examples"]

[project]
name = "tccli"
version = "3.0.1182.1"
authors = [
  { name="tencentcloudapi", email="tencentcloudapi@tencent.com" },
]
description = "Universal Command Line Environment for Tencent Cloud"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
]
dependencies = [
    "jmespath==0.10.0",
    "six==1.16.0",
    "tencentcloud-sdk-python>=3.0.1182",
]

[project.urls]
"Homepage" = "https://github.com/TencentCloud/tencentcloud-cli"
"Bug Tracker" = "https://github.com/TencentCloud/tencentcloud-cli/issues"

[project.scripts]
tccli = "tccli.main:main"
tccli_completer = "tccli.completer:complete"
